--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-react": "^0.5.0-alpha.14",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
