--- a/web/portal/package.json
+++ b/web/portal/package.json
@@ -17,13 +17,16 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-dom": "^18.0.4",
-    "bootstrap": "^5.1.3",
-    "bootstrap-react": "^0.5.0-alpha.14",
+    "bootstrap": "4.6.0",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
+    "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-bootstrap": "^0.26.1",
