Persistance added, selected menu visible
Persistance added, selected menu visible


Former-commit-id: d3522ef86e2de7a77738157112aaa2560e6ace38 [formerly 32474a0a34b0d8a126a91ea405e6381befbbcedd]
Former-commit-id: d3522ef86e2de7a77738157112aaa2560e6ace38

--- a/web/go/scripts/Dockerfile
+++ b/web/go/scripts/Dockerfile
@@ -5,6 +5,7 @@ LABEL com.dymium.vendor="Dymium" \
 RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*      
 COPY server /server
 COPY admin /admin
+COPY customer /customer
 EXPOSE 80
 ENV TZ=PST8PDT
 ENTRYPOINT ["/server"]
