--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ web/go/assets/server
 web/go/src/.vscode/temp.sql
 web/go/src/.vscode/temp.sql
 web/go/src/.vscode/temp.sql
+web/go/assets/customer/logo.png
+web/go/assets/admin/index.html
+web/go/assets/admin/asset-manifest.json
+web/go/assets/admin/favicon.ico
+web/go/assets/admin/asset-manifest.json
+web/go/assets/customer/asset-manifest.json
+web/go/assets/admin/asset-manifest.json
+web/go/assets/admin/favicon.ico
+web/go/assets/admin/index.html
