--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../devcerts/dymium.crt SSL_KEY_FILE=../devcerts/dymium.key HOST=admin.dymium.local react-scripts start",
-    "build": "react-scripts build && cp -r build/* ../go/assets/admin",
+    "build": "react-scripts build && cp -r build/* ../../../go/assets/admin",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
