DbAnalyzer definition incremental change
- move common definitions to a separate file
- remove BLD directory from Git


Former-commit-id: 307fef68fcde6e8c21a34fb06f7f2d478bf46d6b [formerly b26dcd3f79f1307ee0f5aed68e57f5508bfa121e]
Former-commit-id: ff54a6cac5c14c8b66ebf099727432b4052c2310

--- a/DataTypes/DbAnalyzer.yaml
+++ b/DataTypes/DbAnalyzer.yaml
@@ -1,16 +1,12 @@
 ---
 module: DbAnalyzer
 
-ConnectionType:
-  - Postgres
-  - MySQL
-
 connection: !!omap
-  - typ: ConnectionType
+  - typ: Common.ConnectionType
   - address: string
   - port: int
   - user: string
-  - db: string
+  - database: string
   - tls: bool
 
 result: !!omap
@@ -28,14 +24,9 @@ table: !!omap
   - name: string
   - columns: <| column |>
 
-DataSemantics:
-  - FamilyName
-  - Email
-  - SSN
-
 column: !!omap
   - name: string
-  - pos: int
+  - position: int
   - typ: string
   - reference: ?string
-  - semantics: ?DataSemantics
+  - semantics: ?Common.DataSemantics
