--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-bootstrap-typeahead": "^6.0.0-rc.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-bootstrap": "^0.26.1",
