DbAnalyzer: first working iteration
Former-commit-id: 5b2675204fa9c2904b2b8f73245ea1ae26c42446 [formerly 8573776656dd70195ac94de917dcf3bd7dd1045c]
Former-commit-id: 0ab054d0266fa11b67b86911f014516a6d3231eb

--- a/DataTypes/DbAnalyzer.yaml
+++ b/DataTypes/DbAnalyzer.yaml
@@ -6,6 +6,7 @@ connection: !!omap
   - address: string
   - port: int
   - user: string
+  - password: string
   - database: string
   - tls: bool
 
@@ -25,5 +26,10 @@ column: !!omap
   - name: string
   - position: int
   - typ: string
-  - reference: ?string
+  - reference: ?reference
   - semantics: ?Common.DataSemantics
+
+reference: !!omap
+  - schema: string
+  - table: string
+  - column: string
