DbAnalyzer: add isSystem field to schema & table description
Former-commit-id: f22c299dda66abe2910fd2be430b626a86772442 [formerly 3edd6adf5d123c8caafdb3a79a1e02dc859da833]
Former-commit-id: 9f67bce2e73a593a64e0d70dd2c5c472d11a547d

--- a/DataTypes/DbAnalyzer.yaml
+++ b/DataTypes/DbAnalyzer.yaml
@@ -16,10 +16,12 @@ database: !!omap
 
 schema: !!omap
   - name: string
+  - isSystem: bool
   - tables: <| table |>
 
 table: !!omap
   - name: string
+  - isSystem: bool
   - columns: <| column |>
 
 column: !!omap
