--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "4.6.0",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-table-next": "^4.0.3",
