--- a/DataTypes/DbAnalyzer.yaml
+++ b/DataTypes/DbAnalyzer.yaml
@@ -13,6 +13,7 @@ connection: !!omap
 database: !!omap
   - name: string
   - schemas: <| schema |>
+  - refs: <| arc |>
 
 schema: !!omap
   - name: string
@@ -28,6 +29,8 @@ column: !!omap
   - name: string
   - position: int
   - typ: string
+  - isNullable: bool
+  - default: ?string
   - reference: ?reference
   - semantics: ?Common.DataSemantics
 
@@ -35,3 +38,11 @@ reference: !!omap
   - schema: string
   - table: string
   - column: string
+
+arc: !!omap
+  - from_schema: string
+  - from_table: string
+  - from_column: string
+  - to_schema: string
+  - to_table: string
+  - to_column: string
