--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -16,8 +16,9 @@
     "@toolz/use-constructor": "^1.0.1",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
+    "@types/react": "^18.0.12",
     "@types/react-bootstrap-table-next": "^4.0.18",
+    "@types/react-bootstrap-typeahead": "^5.1.8",
     "@types/react-dom": "^18.0.4",
     "bootstrap": "4.6.0",
     "gsap": "^3.10.4",
