--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ web/go/assets/customer/asset-manifest.json
 web/go/assets/customer/index.html
 web/go/scripts/BLD/admin/asset-manifest.json
 web/go/scripts/BLD/admin/index.html
+web/go/assets/admin/asset-manifest.json
+web/go/assets/admin/asset-manifest.json
+web/go/assets/customer/asset-manifest.json
+web/go/assets/admin/asset-manifest.json
+web/go/assets/customer/asset-manifest.json
+web/go/assets/customer/index.html
+web/go/assets/admin/index.html
