groups mapping UI added
Former-commit-id: 5804d470bc74412f34b61be04239205b0cb17a59 [formerly 35535883cbd06e61aeb89efbd3044e924467b00b]
Former-commit-id: dff05ba703ec20f393cd42b9b02f45f35f2f52f8

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ web/go/assets/admin/asset-manifest.json
 web/go/assets/customer/asset-manifest.json
 web/go/assets/customer/index.html
 web/go/assets/admin/index.html
+setup/myddb
+setup/myddb~
