--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -9,3 +9,9 @@ DataSemantics:
   - FamilyName
   - Email
   - SSN
+
+GroupMapping: !!omap
+  - id: ?string
+  - dymiumgroup: string
+  - directorygroup: string
+  - comments: string
