DataGuardian: first working iteration
Former-commit-id: 6e5794162660ff19614a964ed1c106e8343a4a13 [formerly 6ea38389c6c01dbb313b45de08d69303bbb66fc6]
Former-commit-id: 3080cf3d65ecb95d0117d47288531b303745dc66

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -4,6 +4,9 @@ module: Common
 ConnectionType:
   - PostgreSQL
   - MySQL
+  - MariaDB
+  - SqlServer
+  - OracleDB
 
 DataSemantics:
   - FamilyName
