--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -20,6 +20,7 @@
     "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-bootstrap-typeahead": "^5.1.8",
     "@types/react-dom": "^18.0.4",
+    "beautiful-react-hooks": "^3.2.3",
     "bootstrap": "4.6.0",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
