[DataGuardian] working obfuscation prototype
Former-commit-id: 07b1b7e56ec60fbbd86dee341c8f03b9c1ab59d3 [formerly e7cf6e0a1737cdc30ec5c0b25871b6d3b5585c42]
Former-commit-id: 11c1e5bf8e3597b3a2e81a8b8603725e988ef98a

--- a/DataGuardian/scripts/Dockerfile
+++ b/DataGuardian/scripts/Dockerfile
@@ -4,3 +4,6 @@ RUN apt update && apt install -y ca-certificates
 
 COPY initializer /docker-entrypoint-initdb.d/initializer.sh
 RUN chmod 777 /docker-entrypoint-initdb.d/initializer.sh
+
+COPY postgres_fdw.so /usr/lib/postgresql/14/lib/postgres_fdw.so
+RUN chmod 755 /usr/lib/postgresql/14/lib/postgres_fdw.so
