--- a/Utils/DataTypesGenerator/Gen.cabal
+++ b/Utils/DataTypesGenerator/Gen.cabal
@@ -31,6 +31,7 @@ library
       LangGenerators.Haskell
       LangGenerators.Js
       LangGenerators.Python
+      LangGenerators.Ts
       Types
       Types.Ddt
       Types.Lang
