unit tests changes (#37)
Former-commit-id: a5e1e91022621ca3e8d29fb22b8ee23dd0acdd9d [formerly 752fde45a06e7c381b1f837fbe3627513c455c1e]
Former-commit-id: 8c999648d4c67fc8d9e682fc53d8bebad47ec0c0

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -57,13 +57,28 @@ DatascopeRecord: !!omap
   - dflt: string
   - isnullable: bool
 
+DatascopeIdName: !!omap
+  - name: string
+  - id: string	
+
+DatascopeId: !!omap 
+  - id: string
+
+Datascope: !!omap
+  - name: string
+  - id:  string		
+  - records: <|DatascopeRecord|>
 
 OperationStatus: !!omap
   - status: string
   - errormessage:   string
 
-
 ConnectionResponse: !!omap 
   - status: string
   - errormessage:   string
   - data: <|ConnectionRecord|>
+
+AuthStatus: !!omap 
+  - status: string
+  - errormessage: string
+  - token: string
