datatype-generator: final touches
- added check for absence of '-' in struct definitions
- added check for circular dependencies between modules
- added check for submodules existence (in 'rename' and/or
  'destination' redefinitions)
- bug fixes in deployment scenarios


Former-commit-id: 0892a2f24242e33cd65e7afd7112b4659fed4dc9 [formerly 6e3f900d6d31a52cf34faef004078fcc25d3c233]
Former-commit-id: 7427d9166895e5cc0e6da60dbe293bd671a9914e

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -13,13 +13,13 @@ DataSemantics:
   - Email
   - SSN
 
-GroupMapping: !!omap
+GroupMapping:
   - id: ?string
   - dymiumgroup: string
   - directorygroup: string
   - comments: string
 
-ConnectionRecord: !!omap 
+ConnectionRecord:
   - name: string
   - dbtype: string
   - address: string
@@ -32,17 +32,17 @@ ConnectionRecord: !!omap
   - id: ?string
   - credid: ?string
 
-ConnectionsQuery: !!omap 
+ConnectionsQuery:
   - status: string
   - errormessage: ?string
   - records: ?<|ConnectionRecord|>
 
-reference: !!omap
+reference:
   - schema: string
   - table: string
   - column: string
 
-DatascopeRecord: !!omap
+DatascopeRecord:
   - id: ?string	
   - connection: string
   - connectionId: ?string	
@@ -57,28 +57,28 @@ DatascopeRecord: !!omap
   - dflt: string
   - isnullable: bool
 
-DatascopeIdName: !!omap
+DatascopeIdName:
   - name: string
   - id: string	
 
-DatascopeId: !!omap 
+DatascopeId:
   - id: string
 
-Datascope: !!omap
+Datascope:
   - name: string
   - id:  string		
   - records: <|DatascopeRecord|>
 
-OperationStatus: !!omap
+OperationStatus:
   - status: string
   - errormessage:   string
 
-ConnectionResponse: !!omap 
+ConnectionResponse:
   - status: string
   - errormessage:   string
   - data: <|ConnectionRecord|>
 
-AuthStatus: !!omap 
+AuthStatus:
   - status: string
   - errormessage: string
   - token: string
