Unit tests more 0626 (#40)
Former-commit-id: 34ec1ccb609cb6e8a9508ad7af714faeb061395e [formerly 4e5bd358a3b755651bd60ade24d1d33a89d09af1]
Former-commit-id: f9afe63ddfe7bba59ccea13a837402a23d30eba7

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -82,3 +82,18 @@ AuthStatus:
   - status: string
   - errormessage: string
   - token: string
+
+DatascopesStatus: !!omap 
+  - status: string
+  - errormessage: string
+  - records: <|DatascopeIdName|>
+
+DatascopeInfoStatus: !!omap 
+  - status: string
+  - errormessage: string
+  - record: ?Datascope
+
+GroupMappingStatus: !!omap 
+  - status: string
+  - errormessage: string
+  - records: <|GroupMapping|> 
