rename Datascope to Scope in DbSync definition (to resolve conflict)
Former-commit-id: 811eadacbd3a3452fb591fd29aaf61c52aaa8b74 [formerly dc696838843ed1e722f1a37a5bef4c22a29f81f1]
Former-commit-id: 3d7bbc3211f60a997c3be67caabc442ee5912bd8

--- a/DataTypes/DbSync.yaml
+++ b/DataTypes/DbSync.yaml
@@ -4,7 +4,7 @@ module: DbSync
 customerData:
   - credentials: <| credential |>
   - connections: <| connection |>
-  - datascopes: <| datascope |>
+  - datascopes: <| scope |>
 
 credential:
   - connection_id: string
@@ -20,7 +20,7 @@ connection:
   - use_tls: bool
   - dbname: string
 
-datascope:
+scope:
   - name: string
   - connections: <| string |>
   - schemas: <| schema |>
