unit test enhancementw (#41)
Former-commit-id: e5a1a6e88881c12ff1dbb963b682f3d9f7804cf6 [formerly 11f5db2b0ab467f74fea12e58f64d8a00d7c1a9d]
Former-commit-id: f1f7b2a187db3aa8c3d1ac529babf865b2d94908

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -37,6 +37,7 @@ ConnectionsQuery:
   - errormessage: ?string
   - records: ?<|ConnectionRecord|>
 
+
 reference:
   - schema: string
   - table: string
@@ -64,6 +65,9 @@ DatascopeIdName:
 DatascopeId:
   - id: string
 
+RequestById:
+  - id: string
+
 Datascope:
   - name: string
   - id:  string		
@@ -83,17 +87,29 @@ AuthStatus:
   - errormessage: string
   - token: string
 
-DatascopesStatus: !!omap 
+DatascopesStatus:
   - status: string
   - errormessage: string
   - records: <|DatascopeIdName|>
 
-DatascopeInfoStatus: !!omap 
+DatascopeInfoStatus:  
   - status: string
   - errormessage: string
   - record: ?Datascope
 
-GroupMappingStatus: !!omap 
+GroupMappingStatus:  
   - status: string
   - errormessage: string
   - records: <|GroupMapping|> 
+
+GroupAssignment:
+  - name: string
+  - id: string	
+  - groups: <|DatascopeIdName|>
+
+
+DatascopeAndGroups:
+  - id: string	
+  - name: string
+  - groupid: string	
+  - groupname: string
