--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "4.6.0",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
+    "jest-environment-jsdom": "^28.1.2",
     "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^2.0.22",
     "react": "18.1.0",
@@ -37,6 +38,7 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.52.2",
     "typescript": "^4.6.4",
@@ -45,7 +47,7 @@
   "scripts": {
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../../../devcerts/dymium.crt SSL_KEY_FILE=../../../devcerts/dymium.key HOST=portal.dymium.local PORT=3001 react-app-rewired  start",
     "build": "react-app-rewired  build && cp -r build/* ../../../go/assets/customer",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -62,7 +64,11 @@
   },
   "proxy": "http://portal.dymium.local",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.3",
     "customize-cra": "^1.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
     "react-app-rewired": "^2.2.1"
   }
 }
