--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../../../devcerts/dymium.crt SSL_KEY_FILE=../../../devcerts/dymium.key HOST=portal.dymium.local PORT=3001 react-app-rewired  start",
     "build": "react-app-rewired  build && cp -r build/* ../../../go/assets/customer",
-    "test": "jest",
+    "test": "jest --silent",
     "eject": "react-scripts eject"
   },
   "browserslist": {
