--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -67,6 +67,8 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^28.1.3",
     "customize-cra": "^1.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
     "react-app-rewired": "^2.2.1"
