--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -14,7 +14,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@toolz/use-constructor": "^1.0.1",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^28.1.2",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.12",
     "@types/react-bootstrap-table-next": "^4.0.18",
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.4",
     "beautiful-react-hooks": "^3.2.3",
     "bootstrap": "4.6.0",
+    "enzyme-to-json": "^3.6.2",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
     "jest-environment-jsdom": "^28.1.2",
