--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -48,7 +48,7 @@
   "scripts": {
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../../../devcerts/dymium.crt SSL_KEY_FILE=../../../devcerts/dymium.key HOST=portal.dymium.local PORT=3001 react-app-rewired  start",
     "build": "react-app-rewired  build && cp -r build/* ../../../go/assets/customer",
-    "test": "jest --silent",
+    "test": "jest ",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -66,7 +66,7 @@
   "proxy": "http://portal.dymium.local",
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^28.1.3",
+    "@types/jest": "^28.1.2",
     "customize-cra": "^1.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
