Finish comprehensive add datascope unit test
Former-commit-id: 608c7f1464f6e83e6e993c365d92194376f5cf77 [formerly 226f4b38b55d75b95893b35fc2fb205820eb497c]
Former-commit-id: fe5710331620fa8f595a7f83c4dda590482188e2

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -55,7 +55,7 @@ DatascopeRecord:
   - action: string
   - col: string
   - semantics: string
-  - dflt: string
+  - dflt: ?string
   - isnullable: bool
 
 DatascopeIdName:
@@ -70,7 +70,7 @@ RequestById:
 
 Datascope:
   - name: string
-  - id:  string		
+  - id:  ?string		
   - records: <|DatascopeRecord|>
 
 OperationStatus:
