--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -36,15 +36,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: Check Wd
-        run: ls -lah
-
-      - name: Check CWd
-        working-directory: ./web/go/scripts
-        run: ls -lah
-
       - name: Run tests
-        working-directory: ./web/go/scripts
+        working-directory: ./web/go/src
         env:
           # The hostname used to communicate with the PostgreSQL service container
           POSTGRES_HOST: postgres
