--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -32,7 +32,7 @@ jobs:
           go-version: '^1.18.2' # The Go version to download (if necessary) and use.
       - run: go version    
       - name: ubuntu version
-        run: lsb_release -a
+        run: cat /etc/os-release
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
         uses: actions/checkout@v3
