--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -10,7 +10,7 @@ jobs:
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
-    container: node:10.18-jessie
+    container: ubuntu
 
     services:
       # Label used to access the service container
