--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -37,8 +37,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Install CA list
-        run: sudo apt-get install -y ca-certificates
-        
+        run: apt-get install -y ca-certificates
+
       - name: Run tests
         working-directory: ./web/go/src
         env:
