--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -28,10 +28,7 @@ jobs:
           --health-retries 5
     steps:
       - name: Set up GCC
-        uses: egor-tensin/setup-gcc@v1
-        with:
-          version: latest
-          platform: x64
+        run: apt-get install build-essential
               
       - uses: actions/setup-go@v3
         with:
