--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -44,6 +44,9 @@ jobs:
         run: apt-get install -y ca-certificates
       - name: Set up GCC
         run: apt-get install -y build-essential
+      - name: Set up libpq
+        run: apt-get install -y install libpq
+
       - name: Run tests
         working-directory: ./web/go/src
         env:
