--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Set up GCC
         run: apt-get install -y build-essential
       - name: Set up libpq
-        run: apt-get install -y libpq-dev
+        run: apt-get install -y libpq5
 
       - name: Run tests
         working-directory: ./web/go/src
