--- a/web/js/package.json
+++ b/web/js/package.json
@@ -1,5 +1,12 @@
 {
   "name": "Dymium",
   "private": true,
-  "workspaces": ["packages/*"]
+  "workspaces": ["packages/*"],
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  }
+
 }
