--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -20,8 +20,9 @@
     "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-bootstrap-typeahead": "^5.1.8",
     "@types/react-dom": "^18.0.4",
+    "autoprefixer": "10.4.5",
     "beautiful-react-hooks": "^3.2.3",
-    "bootstrap": "4.6.0",
+    "bootstrap": "4.6.1",
     "enzyme-to-json": "^3.6.2",
     "gsap": "^3.10.4",
     "http-proxy-middleware": "^2.0.6",
@@ -44,6 +45,12 @@
     "sass": "^1.52.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.0"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../../../devcerts/dymium.crt SSL_KEY_FILE=../../../devcerts/dymium.key HOST=portal.dymium.local PORT=3001 react-app-rewired  start",
