Data types generator improvements (#52)
* [mallard-improvements] incremment 1

1. add `drop schema` functionality.
2. don't show 'do apply' warning if nothing to apply.
3. imply '--create-schema' flag if '--apply' is given.

* [mallard-improvements] increment 2

1. add as dependencies previous migrations from the same file.
2. exit code should be non-zero in case of error.
3. allow relative paths with '..' in root directory argument.

* [mallard-improvements] increment 3

- for 'hack register-migrations': list of migrations as cli arguments

* [mallard-improvements] increment 4

- add 'hack unregister-migrations' functionality

* [dataTypesGenerator-improvements] installment 1

- human-readable description of Enum values added to TS and JS.
  For an example see changes to DataTypes/Common.yaml
- default values in struct definitions is now entered after "<*>"
  (as opposite to "*" as it was done before).
  The reason is to use similar constructs for Enums and Structs.

* [dataTypesGenerator-improvements] installment 2

in GoLang, don't try to change struct/enum mangling to avoid
conflicts. Consider conflict as a show stopper isnstead.

* [dataTypesGenerator-improvements] remove --create-schema arg from test

Co-authored-by: Valentyn Kamyshenko (at Fortinbras) <kamysh@kamysh.org>
Former-commit-id: d3ba4deaaa53747ef4ddb0f76f5a5ada34a24bb4 [formerly 5e529850cae8dca64110bbfe735786d5030d68c8]
Former-commit-id: 079b4b791730beb5d319a561bc28a3ab8788ea9a

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -2,11 +2,11 @@
 module: Common
 
 ConnectionType:
-  - PostgreSQL
-  - MySQL
-  - MariaDB
-  - SqlServer
-  - OracleDB
+  - PostgreSQL <*> PostgreSQL Database
+  - MySQL      <*> MySQL Database
+  - MariaDB    <*> MariaDB Database
+  - SqlServer  <*> Microsoft SQL Server
+  - OracleDB   <*> Oracle Database
 
 DataSemantics:
   - FamilyName
