--- a/Utils/mallard/stack.yaml
+++ b/Utils/mallard/stack.yaml
@@ -1,9 +1,9 @@
 packages:
 - '.'
-resolver: lts-18.25
+resolver: lts-19.13
 extra-deps:
 - Interpolation-0.3.0
-- hasql-th-0.4.0.11
-- postgresql-syntax-0.4
+# - hasql-th-0.4.0.11
+# - postgresql-syntax-0.4
 - headed-megaparsec-0.2.0.2
-- selective-0.5
+# - selective-0.5
