remove build files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,10 @@
 
 .DS_Store
 web/go/assets/server
-web/go/src/.vscode/temp.sql
-web/go/src/.vscode/temp.sql
-web/go/src/.vscode/temp.sql
-web/go/assets/customer/logo.png
-web/go/assets/admin/index.html
-web/go/assets/admin/asset-manifest.json
-web/go/assets/admin/favicon.ico
-web/go/assets/admin/asset-manifest.json
-web/go/assets/customer/asset-manifest.json
-web/go/assets/admin/asset-manifest.json
-web/go/assets/admin/favicon.ico
-web/go/assets/admin/index.html
-web/go/src/.vscode/temp.sql
-web/go/assets/admin/index.html
-web/go/assets/customer/asset-manifest.json
-web/go/assets/customer/index.html
-web/go/scripts/BLD/admin/asset-manifest.json
-web/go/scripts/BLD/admin/index.html
-web/go/assets/admin/asset-manifest.json
-web/go/assets/admin/asset-manifest.json
-web/go/assets/customer/asset-manifest.json
-web/go/assets/admin/asset-manifest.json
-web/go/assets/customer/asset-manifest.json
-web/go/assets/customer/index.html
-web/go/assets/admin/index.html
+web/go/src/.vscode
+web/go/assets/customer
+web/go/assets/admin
+web/go/scripts/BLD
 setup/myddb
 setup/myddb~
 setup/adventureworks.sql
@@ -34,3 +13,4 @@ setup/adventureworks.sql~
 setup/northwind.sql~
 web/js/.yarnclean
 web/js/packages/portal/.yarnclean
+web/go/assets/\#run.sh\#
