--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -83,5 +83,6 @@ jobs:
           ADMIN_HOST: 'admin.dymium.local'
           FILESYSTEM_ROOT: '../../assets/'
           AWS_LAMBDAS: '{ "DbAnalyzer": "localhost:9080", "DbSync": "localhost:9081" }'
-
+        mkdir -p ../../../go/assets/customer
+        cp ../public/logo.png ../../../go/assets/customer/
         run: go test -v ./...
