small caps pattern in Connection for dymium name

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ setup/northwind.sql~
 web/js/.yarnclean
 web/js/packages/portal/.yarnclean
 web/go/assets/\#run.sh\#
+DbSync/scripts/localruntest.sh~
+web/go/assets/runtest.sh~
