[mysql] changes to build scripts

--- a/DbGuardian/scripts/Dockerfile
+++ b/DbGuardian/scripts/Dockerfile
@@ -5,5 +5,7 @@ RUN apt update && apt install -y ca-certificates
 COPY initializer /docker-entrypoint-initdb.d/initializer.sh
 RUN chmod 777 /docker-entrypoint-initdb.d/initializer.sh
 
-COPY postgres_fdw.so /usr/lib/postgresql/14/lib/postgres_fdw.so
-RUN chmod 755 /usr/lib/postgresql/14/lib/postgres_fdw.so
+COPY postgres_fdw.so mysql_fdw.so /usr/lib/postgresql/14/lib/
+RUN chmod 755 \
+  /usr/lib/postgresql/14/lib/postgres_fdw.so \
+  /usr/lib/postgresql/14/lib/mysql_fdw.so
