checkpoint before doing multiplexing

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -119,6 +119,8 @@ CustomerIDRequest:
 
 CustomerIDResponse:
   - loginURL: string
+  - lbaddress: string
+  - lbport: int
 
 AuthorizationCodeRequest:
   - customerid: string
