--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ Tunnels/go/client/client
 Tunnels/go/server/server
 Tunnels/go/client/tunnel.exe
 Tunnels/go/client/tunnel
+Tunnels/go/client/.vscode/__debug_bin
+Tunnels/go/client/.vscode/launch.json
+Tunnels/go/client/__debug_bin.old
+Tunnels/go/client/client.old
