--- a/web/go/scripts/Dockerfile
+++ b/web/go/scripts/Dockerfile
@@ -3,6 +3,7 @@ LABEL com.dymium.vendor="Dymium" \
       version="0.1" \
       product="Dymium Web Front End"
 RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*      
+RUN apk add curl
 COPY server /server
 COPY admin /admin
 COPY customer /customer
