test sql interface provisioned, 70%

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -66,6 +66,16 @@ DatascopeIdName:
 DatascopeId:
   - id: string
 
+DatascopeTable:
+  - database: string
+  - schema: string
+  - table: string
+
+DatascopeTables:
+  - status: string
+  - errormessage:   string  
+  - tables: <|DatascopeTable|>
+
 RequestById:
   - id: string
 
