--- a/DataTypes/DbSyncCommon.yaml
+++ b/DataTypes/DbSyncCommon.yaml
@@ -6,14 +6,25 @@ Action:
   - update
   - delete
   - confUser
+  - sqlTest
 
 request:
   - action: Action
   - customer: string
   - datascope: ?string
   - userConf: ?userConf
+  - sqlTest: ?sqlTestConf
 
 userConf:
   - name: string
   - password: string
-  - datascopes: <|string|> 
+  - datascopes: <|string|>
+
+sqlTestConf:
+  - database: ?string
+  - schema: string
+  - table: string
+
+sqlTestResult:
+  - columns: <|string|>
+  - records: <2|string|2>
