[sqlTest] working version

--- a/DataTypes/DbSyncCommon.yaml
+++ b/DataTypes/DbSyncCommon.yaml
@@ -21,7 +21,7 @@ userConf:
   - datascopes: <|string|>
 
 sqlTestConf:
-  - database: ?string
+  - database: string
   - schema: string
   - table: string
 
