fix webserver unit test to reflect changes in test.sh

--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -60,6 +60,7 @@ jobs:
           DATABASE_ADMIN_USER: postgres
           DATABASE_TLS: disable
           DATABASE_PASSWORD: postgres
+          DATABASE_ADMIN_PASSWORD: postgres
 
           AUTH0_ADMIN_DOMAIN: 'https://dymium-dev-admin.us.auth0.com/'
           AUTH0_ADMIN_CLIENT_ID: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
