--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Tunnels/go/client/.vscode/launch.json
 Tunnels/go/client/__debug_bin.old
 Tunnels/go/client/client.old
 Tunnels/go/server/server
+Tunnels/go/client/client.exe.old
