--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Tunnels/go/client/__debug_bin.old
 Tunnels/go/client/client.old
 Tunnels/go/server/server
 Tunnels/go/client/client.exe.old
+.VSCodeCounter
